# robot-optimal-trajectory-planning

./: README.md  pyproject.toml
examples/: custom_collision_model.ipynb  minimal_example.py  solve_planning_problem.ipynb
src/robot_optimal_trajectory_planning/: ModelBasedPlannerCasadi.py  ModelBasedPlannerInterface.py  SystemModel.py  collision.py
src/robot_optimal_trajectory_planning/config/: __init__.py  _problem.py  _robot.py  _solver.py
src/robot_optimal_trajectory_planning/config/custom/: example.custom_mpc.yaml
test/: armJogging1.csv  reference_simulator.py  test_modelbasedplanner.py
